feat: rename names methods

--- a/public/sidepanel.html
+++ b/public/sidepanel.html
@@ -10,8 +10,8 @@
     <p class="extension__description">
         Establecer valores por defecto en el formulario de pasajeros en la plataforma avianca.com. El número de pasajeros puede ser n; y puede ser cualquier tipo de pasajero (adultos, jóvenes, niños o bebés).
     </p>
-    <div class="extension__container__button">
-        <button>
+    <div class="avianca__extension__container__button">
+        <button id="avianca__extension__button">
             Establecer valores en formulario
         </button>
     </div>
