feat: logic completed extension fill fields form passenger

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -12,18 +12,18 @@
     <div class="extension__container__image">
         <div class="extension__image__evolution"></div>
     </div>
-    <h1 class="extension__title">Extensión de pasajeros avianca</h1>
+    <h1 class="extension__title">Avianca Passenger</h1>
     <p class="extension__description">
         Esta extensión facilita la personalización del formulario de pasajeros en el sitio web de Avianca (avianca.com).
         Permite establecer valores predeterminados para el número de pasajeros; incluyendo adultos, jóvenes, niños o bebés. Con solo un clic, podrás optimizar el proceso de
         reserva, ahorrando tiempo al completar automáticamente los campos del formulario.
     </p>
     <div class="avianca__extension__container__button">
-        <button id="avianca__extension__button">
+        <button id="avianca__button">
             Establecer valores en formulario
         </button>
     </div>
-    <script src="./content-app.js"></script>
+    <script src="./sidepanel.js"></script>
 </body>
 
 </html>
