bug: error UI extension interface

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -20,9 +20,16 @@
     </p>
     <div class="avianca__extension__container__button">
         <button id="avianca__button">
-            Establecer valores en formulario
+            Aplicar valores predeterminados
         </button>
     </div>
+
+    <div class="footer">
+        <div class="author">
+            © <p id="date"></p> <a href="https://github.com/fainnerramirez" target="_blank">Fainner Ramirez</a>
+        </div>
+    </div>
+
     <script src="./sidepanel.js"></script>
 </body>
 
