feat: udpate changes

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -26,7 +26,7 @@
 
     <div class="footer">
         <div class="author">
-            © <p id="date"></p> <a href="https://github.com/fainnerramirez" target="_blank">Fainner Ramirez</a>
+            © <p id="date"></p> <a href="https://github.com/fainnerramirez" target="_blank">Fainner Ramírez</a>
         </div>
     </div>
 
