feat: delete button payment

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -24,12 +24,7 @@
             <div class="avianca__actions_container">
                 <div class="avianca__button">
                     <button id="avianca__action__passenger" class="action__button">
-                        Completar valores en pasajeros
-                    </button>
-                </div>
-                <div class="avianca__button">
-                    <button id="avianca__action__payment" class="action__button">
-                        Completar valores en pagos
+                        Completar valores del formulario
                     </button>
                 </div>
             </div>
