feat: add icons fontawesome

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidepanel</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
     <div class="avianca__page">
         <div class="avianca__header">
+            <div class="avianca__logo__evolutivos"></div>
             <h2 class="avianca__title">Avianca AutoForm</h2>
             <p class="avianca__subtitle">
-                ahorra tiempo en cada reserva y pago
+                ahorra tiempo en cada reserva
             </p>
         </div>
 
@@ -24,6 +26,7 @@
             <div class="avianca__actions_container">
                 <div class="avianca__button">
                     <button id="avianca__action__passenger" class="action__button">
+                        <i class="fa-solid fa-user-plus"></i>
                         Completar valores del formulario
                     </button>
                 </div>
@@ -36,11 +39,11 @@
             </div>
             <div class="avianca__card__body">
                 <div class="avianca__card__item">
-                    <div class="tooltip">Tip 1</div>
+                    <div class="tooltip"><i class="fa-solid fa-lightbulb"></i></div>
                     <p>Soporte para múltiples pasajeros</p>
                 </div>
                 <div class="avianca__card__item">
-                    <div class="tooltip">Tip 2</div>
+                    <div class="tooltip"><i class="fa-solid fa-lightbulb"></i></div>
                     <p>Funciona en reservas y check-in</p>
                 </div>
             </div>
