--- a/sidepanel.html
+++ b/sidepanel.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="avianca__card__item">
                     <div class="tooltip"><i class="fa-solid fa-lightbulb"></i></div>
-                    <p>Funciona en reservas y check-in</p>
+                    <p>Funciona en reservas</p>
                 </div>
             </div>
         </div>
