--- a/sidepanel.html
+++ b/sidepanel.html
@@ -7,14 +7,18 @@
     <title>Sidepanel</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
     <div class="avianca__page">
         <div class="avianca__header">
-            <div class="avianca__logo__evolutivos"></div>
-            <h2 class="avianca__title">Avianca AutoForm</h2>
-            <p class="avianca__subtitle">
+            <div class="avianca__logo__evolutivos animate__animated animate__fadeInUp"></div>
+            <h2 class="avianca__title animate__animated animate__fadeInUp">Avianca AutoForm</h2>
+            <p class="avianca__subtitle animate__animated animate__fadeInUp">
                 ahorra tiempo en cada reserva
             </p>
         </div>
@@ -42,6 +46,7 @@
                     <div class="tooltip"><i class="fa-solid fa-lightbulb"></i></div>
                     <p>Soporte para múltiples pasajeros</p>
                 </div>
+                <div class="avianca__divider"></div>
                 <div class="avianca__card__item">
                     <div class="tooltip"><i class="fa-solid fa-lightbulb"></i></div>
                     <p>Funciona en reservas</p>
