feat: add animations button generate

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidepanel</title>
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
         <div class="avianca__footer">
             <div class="avianca__author">
                 © <p id="date"></p>
-                <p>Evolutivos</p>
+                <p>Evolutivos Avianca</p>
             </div>
         </div>
     </div>
