--- a/src/sidepanel/sidepanel.html
+++ b/src/sidepanel/sidepanel.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidepanel</title>
     <link rel="stylesheet" href="./index.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -26,6 +23,9 @@
         <div class="avianca__card">
             <div class="avianca__card__title">
                 <h3>Rellenar Formulario</h3>
+                <div>
+                    <p>Completa formularios con un solo clic</p>
+                </div>
             </div>
             <div class="avianca__actions_container">
                 <div class="avianca__button">
@@ -62,6 +62,7 @@
         </div>
     </div>
     <script src="./sidepanel.js"></script>
+    <script type="module" src="./firebase/configuration.mjs"></script>
 </body>
 
 </html>
